tre/deploy/overlays/tre-v2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tre-v2
  labels:
    app.kubernetes.io/part-of: tre-v2
